resources/sass/app.scss
@import url('https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

.li_role, .li_field {
    @apply text-slate-800 py-1 px-2 hover:text-blue-900 hover:bg-gray-100 rounded-lg cursor-pointer border-transparent focus:border-transparent focus:ring-0 border-none focus:outline-none flex items-center justify-between;


    .delete_role, .delete_field {
        @apply bg-red-400 hover:bg-red-600 text-white content-center justify-center flex;

        .x_del {
            @apply w-4 h-4 mt-0.5;
        }
    }
}

.add_role, .delete_role, .add_field, .delete_field {
    @apply w-8 h-8 font-bold text-center  justify-center rounded-full #{!important};
}

.wrap {
    @apply hover:border-blue-300;
    .wrap_header {
        @apply hover:text-blue-600;
    }
}
.wrap_header.active {
    @apply box-border text-blue-900 bg-white border-blue-200;
}

.popup {
    @apply z-10 w-full h-full bg-gray-900 bg-opacity-10 fixed top-0 left-0 ;

    .window {
        @apply w-1/2 mx-auto mt-8 bg-white rounded-xl shadow-2xl py-8 px-12 max-h-[600px] overflow-y-scroll;
    }
}

.header_text {
    @apply text-4xl font-normal leading-normal mt-0 mb-2 text-slate-700;
}

.is-invalid {
    @apply border-red-600 #{!important};
}

.suggestions {
    @apply bg-white rounded-b-xl shadow-lg py-3 px-4 -mt-2 select-none;
    .suggestion {
        @apply cursor-pointer py-2 px-1 rounded-lg;
        &:last-of-type {
            @apply border-0 box-border;
        }
        &:hover {
            @apply bg-gray-100;
        }
        &:active {
            @apply bg-gray-200;
        }
    }
}

.comment_form {
    .comment_input {
        @apply w-full rounded-lg px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 transition ease-in-out m-0 focus:text-gray-900 focus:bg-white focus:shadow-blue-200 focus:shadow-[0_0_0_3px_rgba(0,0,0,0.3)] focus:outline-none hover:shadow-blue-100 hover:shadow-[0_0_0_3px_rgba(0,0,0,0.3)];
    }
    .submit_comment {
        @apply float-right bg-blue-400 text-white font-bold rounded-lg px-4 py-2 my-2 hover:bg-blue-600 ease-in-out transition-all;
    }
    .cancel_comment {
        @apply mr-3 float-right bg-transparent text-gray-600 font-bold rounded-lg px-4 py-2 my-2 hover:bg-gray-100 ease-in-out transition-all;
    }
}

.comment {
    @apply px-3 py-2;
    .comment_reply, .reply {
        @apply text-gray-600 cursor-pointer hover:text-blue-400;
    }
}

.highlighted {
    @apply bg-blue-50 rounded-lg;
}

.notifications {
    @apply relative mr-6;
}

.notifications_head {
    @apply cursor-pointer select-none;
}
.notifications_body {
    @apply absolute w-[400px] right-1 z-10 bg-white rounded-lg shadow-lg py-4 px-6 max-h-[450px] overflow-y-scroll;
}

.notification {
    @apply px-3 py-1 mb-2 border-b border-gray-300 hover:bg-blue-50 hover:rounded-lg hover:border-blue-50;
}

.addresses {
    @apply w-[650px] mx-auto;
    .addresses_title {
        @apply text-xl text-center;
    }
    .address {
        @apply shadow-lg rounded-lg mt-4;
        .address_name {
            @apply text-lg text-center w-full bg-blue-600 text-white rounded-t-lg py-2;
        }
        .address_content {
            @apply px-8 py-4;
            .counters_title {
                @apply text-center
            }
            .counters {
                @apply border-b border-t my-2 py-2;
                .counter {
                    @apply shadow-md rounded-lg px-4 py-2;
                    .counter_field {
                        @apply block h-[30px] clear-both odd:bg-gray-100 px-2 py-0.5 rounded-lg transition-all hover:bg-slate-200;
                        .counter_field_label {
                            @apply float-left text-slate-800;
                        }
                        .counter_field_value {
                            @apply float-right text-black font-semibold;
                        }
                    }
                }
            }
        }
    }
}

.fck-spinner {
    background: url("./Spinner-1.2s-221px.svg");
    background-size: 100%;
    @apply bg-no-repeat bg-center w-[22px] h-[22px] ;
}

